examples/pos/capture/state_eff.effekt
interface State[S] {
  def get(): S
  def set(x: S): Unit
}

def handleState[S, R](init: S) { prog: {State[S]} => R }: R = {
  val stateFun: S => R at prog =
    try {
      val res = prog {state}
      box { (s: S) => res } at prog
    } with state: State[S] {
      def get() = box { (s: S) => (resume(s))(s) }
      def set(x) = box { (s: S) => (resume(()))(x) }
    }
  stateFun(init)
}

def main() =
  handleState(0) { {s: State[Int]} =>
    println(s.get[Int]())
    s.set(2)
    println(s.get[Int]())
  }

