examples/neg/duplicate_operation.effekt
module examples/pos/duplicate_operation

// TODO If we move `State` below `state` then it is not resolved
interface State {
    def get(): Int
    def set(n: Int): Unit
}

def state[R](init: Int) { f: => R / { State } }: Unit = {
    var s = init;
    try { f(); () } with State {
        def get() = resume(s)
        def get() = resume(s)
        def set(n) = { s = n; resume(()) }
    }
}

def main() = {
    with state(4);
    val x = 2 + do get();
    println(x)
}
